objects/Product_Specialty_Oppty_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_User__c</fullName>
        <description>Assigned User</description>
        <formula>Product_Specialty_User_Assignment__r.User__r.FirstName +&apos; &apos;+  Product_Specialty_User_Assignment__r.User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Assigned User</inlineHelpText>
        <label>Assigned User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Product_Specialty_User_Assignment__r.User__r.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HP_Opportunity_Id__c</fullName>
        <formula>Opportunity__r.Opportunity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HP Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Eligibility_Flag__c</fullName>
        <formula>Owner:User.Lead_Eligibility_Flag__c</formula>
        <label>Lead Eligibility Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <description>Opportunity Amount</description>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Amount</inlineHelpText>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner__r.Last_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <description>Opportunity Type</description>
        <formula>TEXT(Opportunity__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Type</inlineHelpText>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity - LookUp</description>
        <inlineHelpText>Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Product_Specialty_Oppty_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpptyUserPSKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Key for saving Opportunity+User+PS as a unique key to restrict duplicate entries.</description>
        <externalId>true</externalId>
        <inlineHelpText>Key for saving Opportunity+User+PS as a unique key to restrict duplicate entries.</inlineHelpText>
        <label>OpptyUserPSKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Specialty_User_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specialty User Assignment - LookUp</description>
        <inlineHelpText>Specialty User Assignment</inlineHelpText>
        <label>Specialty User Assignment</label>
        <referenceTo>Product_Specialty_User_Assignment__c</referenceTo>
        <relationshipName>Product_Specialty_Oppty_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Specialty__c</fullName>
        <description>Specialty</description>
        <formula>Product_Specialty_User_Assignment__r.Product_Specialty__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Specialty</inlineHelpText>
        <label>Specialty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Eligible_Status__c</fullName>
        <formula>TEXT(Owner:User.Renewal_Eligible_Status__c)</formula>
        <label>Renewal Eligible Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>Product_Specialty_User_Assignment__r.User__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_To_Market__c</fullName>
        <description>Route To Market</description>
        <formula>TEXT(Opportunity__r.Route_To_Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Route To Market</inlineHelpText>
        <label>Go To Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Stage</description>
        <formula>TEXT( Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Stage</inlineHelpText>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <formula>Product_Specialty_User_Assignment__r.User__r.State</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_id__c</fullName>
        <formula>Product_Specialty_User_Assignment__r.User__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>user id</label>
        <type>Text</type>
    </fields>
    <label>Specialty Opportunity Match</label>
    <listViews>
        <fullName>Opportunities_with_my_Product_Specialty</fullName>
        <columns>HP_Opportunity_Id__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>Route_To_Market__c</columns>
        <columns>Stage__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Opportunity_Amount__c</columns>
        <columns>Opportunity_Owner__c</columns>
        <filterScope>Mine</filterScope>
        <label>Opportunities with my Specialty Matches</label>
    </listViews>
    <nameField>
        <displayFormat>PSO-{000000}</displayFormat>
        <label>Specialty Opportunity Match</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Specialty Opportunity Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>